equalizer: Don't call iirequalizer's transform_ip in passthrough mode

It tries to map the read-only buffer with GST_MAP_READWRITE and crashes.

https://bugzilla.gnome.org/show_bug.cgi?id=737886